--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,22 +1,22 @@
 @import '../utils/variables.scss';
 
-/* ADVANTAGES */
-
 .advantages {
-  padding-top: 94px;
+  padding-top: 60px;
 
   &__list {
     display: flex;
     justify-content: center;
     gap: 30px;
+    flex-wrap: wrap;
   }
 
   &__title {
     font-size: 14px;
     font-weight: 700;
     letter-spacing: 0.03em;
-    line-height: 1.17;
+    line-height: 1.14;
     padding-bottom: 10px;
+    text-align: center;
   }
 
   &__desc {
@@ -24,17 +24,54 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: $light-gray;
-    width: 270px;
   }
 
   &__icon-background {
     background-color: $team-background-color;
-    width: 270px;
-    height: 120px;
+    padding: 25px 100px;
     margin-bottom: 30px;
     border-radius: 4px;
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages {
+    padding-top: 94px;
+
+    &__list {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    &__title {
+      font-size: 14px;
+      font-weight: 700;
+      letter-spacing: 0.03em;
+      line-height: 1.17;
+      padding-bottom: 10px;
+    }
+
+    &__desc {
+      font-size: 14px;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+      color: $light-gray;
+      width: 270px;
+    }
+
+    &__icon-background {
+      background-color: $team-background-color;
+      width: 270px;
+      height: 120px;
+      margin-bottom: 30px;
+      border-radius: 4px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
