--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,12 +1,11 @@
 @import '../utils/variables.scss';
 
-/* LOGO */
 .logo {
   font-family: Raleway;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   letter-spacing: 0.03em;
-  line-height: 1.17;
+  line-height: 1.16;
   text-decoration: none;
   margin-right: 93px;
 
@@ -25,5 +24,34 @@
   &--white {
     color: $main-white;
     margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-family: Raleway;
+    font-weight: 700;
+    font-size: 26px;
+    letter-spacing: 0.03em;
+    line-height: 1.17;
+    text-decoration: none;
+    margin-right: 93px;
+
+    &--black {
+      color: $main-black;
+    }
+
+    /* LOGO HEADER */
+
+    &__web {
+      color: $main-blue;
+    }
+
+    /* LOGO FOOTER */
+
+    &--white {
+      color: $main-white;
+      margin-right: 0;
+    }
   }
 }
