--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -67,6 +67,7 @@
   &__form-wrapper {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
   }
 
@@ -77,13 +78,12 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     display: flex;
-    // margin-bottom: 20px;
   }
 
   &__email {
     border: 1px solid $footer-email-border;
-    // max-width: 450px;
-    // flex-basis: 100%;
+    width: calc(100vw - 15px);
+    max-width: 450px;
     padding: 15px;
     background-color: transparent;
     border-radius: 4px;
