--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,7 +1,5 @@
 @import '../utils/variables.scss';
 
-/* MODAL */
-
 .modal {
   background-color: $modal-background;
   position: fixed;
@@ -14,8 +12,8 @@
   justify-content: center;
 
   &__box {
-    width: 528px;
-    height: 581px;
+    max-width: 450px;
+    min-height: 609px;
     background-color: $main-white;
     position: relative;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -66,6 +64,8 @@
   &__form-container {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 
   &__form {
@@ -94,7 +94,8 @@
   }
 
   &__form-style {
-    width: 448px;
+    width: calc(100vw - 30px);
+    max-width: 370px;
     border: 1px solid $form-border;
     border-radius: 4px;
     transition: outline, border-color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -108,7 +109,7 @@
   }
 
   &__form-input {
-    padding: 10px 10px 10px 42px;
+    padding: 14px 14px 14px 42px;
   }
 
   &__form-icon-container {
@@ -130,9 +131,10 @@
   }
 
   &__consent-text {
-    font-size: 14px;
+    font-size: 12px;
     letter-spacing: 0.03em;
-    line-height: 1.71;
+    line-height: 1.16;
+    color: $light-gray;
 
     &-link {
       color: $main-blue;
@@ -143,8 +145,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 8px;
-    margin-top: 20px;
+    gap: 7px;
+    margin: 20px 40px 0;
   }
 
   &__checkbox {
@@ -171,5 +173,191 @@
 
   & .modal__box {
     transform: translateY(-50%) rotateX(90deg);
+  }
+}
+
+// --------
+
+// @media screen and (max-width: 1199px) {
+//   width: 95vw;
+//   max-width: 450px;
+//   height: 95%;
+//   max-height: 609px;
+//   overflow: scroll;
+// }
+
+// --------
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    background-color: $modal-background;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &__box {
+      width: 528px;
+      height: 581px;
+      background-color: $main-white;
+      position: relative;
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 4px;
+      transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__close-button {
+      border: 1px solid $modal-button;
+      border-radius: 50%;
+      background-color: $main-white;
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      width: 30px;
+      height: 30px;
+      margin: 0;
+      padding: 0;
+      transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &::after {
+        content: '\00d7';
+        font-size: 25px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      &:hover {
+        cursor: pointer;
+        transform: rotate(90deg);
+      }
+    }
+
+    /* MODAL BOX FORM */
+
+    &__title {
+      font-size: 20px;
+      line-height: 1.15;
+      letter-spacing: 0.03em;
+      padding-top: 40px;
+      text-align: center;
+      margin-bottom: 12px;
+    }
+
+    &__form-container {
+      display: flex;
+      justify-content: center;
+    }
+
+    &__form {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__form-text {
+      resize: none;
+      line-height: 1.16;
+      letter-spacing: 0.01em;
+      padding: 12px 16px;
+
+      &::placeholder {
+        font-size: 12px;
+        color: $grey-opacity;
+      }
+    }
+
+    &__label-style {
+      font-size: 12px;
+      line-height: 1.16;
+      letter-spacing: 0.01em;
+      color: $light-gray;
+      margin-bottom: 4px;
+    }
+
+    &__form-style {
+      width: 448px;
+      border: 1px solid $form-border;
+      border-radius: 4px;
+      transition: outline, border-color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:focus,
+      &:hover {
+        outline: none;
+        border-color: $main-blue;
+        fill: $main-blue;
+      }
+    }
+
+    &__form-input {
+      padding: 10px 10px 10px 42px;
+    }
+
+    &__form-icon-container {
+      position: relative;
+      margin-bottom: 10px;
+
+      &:focus-within,
+      &:hover {
+        fill: #2196f3;
+      }
+    }
+
+    &__form-icon {
+      position: absolute;
+      left: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__consent-text {
+      font-size: 14px;
+      letter-spacing: 0.03em;
+      line-height: 1.71;
+
+      &-link {
+        color: $main-blue;
+      }
+    }
+
+    &__consent-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      margin-top: 20px;
+    }
+
+    &__checkbox {
+      width: 16px;
+      height: 15px;
+      background-color: $main-white;
+      appearance: none;
+      border: 2px solid $dark;
+      border-radius: 2px;
+
+      &:checked {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='16' height='15' viewBox='5 2 11 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='icon check'%3E%3Crect id='Rectangle 11' width='11' height='8' rx='2' fill='%232196F3'/%3E%3Cpath id='Vector' d='M3.95703 7.75166L3.88825 7.68604L3.81923 7.75141L2.93123 8.59258L2.85486 8.66492L2.93097 8.73753L6.42671 12.0724L6.49574 12.1382L6.56476 12.0724L14.069 4.91352L14.1449 4.84116L14.069 4.76881L13.1873 3.92764L13.1183 3.86183L13.0493 3.92761L6.49577 10.1735L3.95703 7.75166Z' fill='white' stroke='white' stroke-width='0.2'/%3E%3C/g%3E%3C/svg%3E");
+        background-color: $main-blue;
+        border-color: transparent;
+      }
+    }
+  }
+
+  .is-hidden {
+    visibility: hidden;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity, visibility, 500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    & .modal__box {
+      transform: translateY(-50%) rotateX(90deg);
+    }
   }
 }
