--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -5,8 +5,6 @@
 }
 
 .page-header {
-  // nie ma tego w mobile, sprawdzić dla tabletu
-  // ----------------- START -----------------
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -80,7 +78,44 @@
       background-color: $main-blue;
     }
   }
-  // ----------------- END -----------------
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-hide {
+    display: contents;
+  }
+
+  .menu-toggle {
+    display: none;
+  }
+
+  .page-header {
+    padding: 26px 0;
+
+    &__nav-list {
+      gap: 60px;
+    }
+
+    &__right-section {
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    &__nav-link {
+      font-size: 14px;
+      line-height: 1.16;
+
+      &--contact {
+        font-size: 12px;
+      }
+    }
+
+    &__is-active {
+      &::after {
+        top: 50px;
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 1200px) {
