--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -27,6 +27,16 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 83px;
+
+    &--white {
+      margin-right: 0;
+    }
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .logo {
     font-family: Raleway;
