--- a/sass/components/_side-menu.scss
+++ b/sass/components/_side-menu.scss
@@ -38,10 +38,12 @@
   text-decoration: none;
 }
 
-.menu-toggle {
+.menu-toggle-close {
   position: absolute;
   top: 10px;
   right: 15px;
+  border: none;
+  background-color: transparent;
 }
 
 .mobile__link:first-child {
