--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -51,6 +51,25 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .team {
+    &__list {
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    &__employe {
+      font-size: 16px;
+      font-weight: 500;
+      letter-spacing: 0.03em;
+      line-height: 1.18;
+      padding-top: 30px;
+      padding-bottom: 10px;
+    }
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .team {
     text-align: center;
