--- a/sass/utils/_globals.scss
+++ b/sass/utils/_globals.scss
@@ -45,6 +45,12 @@ p {
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .section {
     padding: 94px 0;
