--- a/sass/components/_what-we-do.scss
+++ b/sass/components/_what-we-do.scss
@@ -4,40 +4,9 @@
   display: none;
 }
 
-.what-we-do {
-  text-align: center;
-
-  &__images-list {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    flex-wrap: wrap;
-  }
-
-  &__our-jobs {
-    position: relative;
-    z-index: -1;
-  }
-
-  &__job-desc {
-    position: absolute;
-    top: 224px;
-    left: 0;
-    width: 370px;
-    height: 70px;
-    padding: 27px;
-    font-size: 14px;
-    font-weight: 700;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 0.03em;
-    color: $main-white;
-    background-color: $image-desc;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .what-we-do {
+    display: block;
     text-align: center;
 
     &__images-list {
@@ -55,8 +24,9 @@
       position: absolute;
       top: 224px;
       left: 0;
-      width: 370px;
-      height: 70px;
+      width: 100%;
+      max-width: 370px;
+      height: auto;
       padding: 27px;
       font-size: 14px;
       font-weight: 700;
