--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -60,39 +60,10 @@
 
 @media screen and (min-width: 1200px) {
   .advantages {
-    padding-top: 94px;
+    padding: 94px 0;
 
     &__list {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-    }
-
-    &__title {
-      font-size: 14px;
-      font-weight: 700;
-      letter-spacing: 0.03em;
-      line-height: 1.17;
-      padding-bottom: 10px;
-    }
-
-    &__desc {
-      font-size: 14px;
-      line-height: 1.71;
-      letter-spacing: 0.03em;
-      color: $light-gray;
-      width: 270px;
-    }
-
-    &__icon-background {
-      background-color: $team-background-color;
-      width: 270px;
-      height: 120px;
-      margin-bottom: 30px;
-      border-radius: 4px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      flex-wrap: nowrap;
     }
   }
 }
