--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -5,7 +5,7 @@
   text-align: center;
   background-color: $dark-gray-background-color;
   background-image: linear-gradient(to bottom, $photo-gradient, $photo-gradient),
-    url(../images/title_background_mobile@1.jpg);
+    url(../images/title_mobile@1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -26,18 +26,31 @@
     margin-bottom: 30px;
   }
 }
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .title {
+    background-image: linear-gradient(to bottom, $photo-gradient, $photo-gradient),
+      url(../images/title_mobile@2x.jpg);
+  }
+}
 
 @media screen and (min-width: 768px) {
   .title {
     background-image: linear-gradient(to bottom, $photo-gradient, $photo-gradient),
-      url(../images/Header_tablet.jpg);
+      url(../images/title_tablet@1x.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .title {
+      background-image: linear-gradient(to bottom, $photo-gradient, $photo-gradient),
+        url(../images/title_tablet@2x.jpg);
+    }
   }
 }
 
 @media screen and (min-width: 1200px) {
   .title {
     background-image: linear-gradient(to bottom, $photo-gradient, $photo-gradient),
-      url(../images/title_photo.jpg);
+      url(../images/title_desktop@1x.jpg);
 
     background-size: 1600px;
 
@@ -49,6 +62,13 @@
       font-size: 44px;
       line-height: 1.36;
       max-width: 696px;
+    }
+  }
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .title {
+      background-image: linear-gradient(to bottom, $photo-gradient, $photo-gradient),
+        url(../images/title_desktop@2x.jpg);
     }
   }
 }
